@front #fix vertical scroll bar always visible

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -32,6 +32,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
   margin: 0;
   font-size: 14px;
+  overflow-y: scroll;
 
   &.dark {
     background: #2d224d;
